//import com.github.spotbugs.snom.Confidence
//import com.github.spotbugs.snom.Effort
//import com.github.spotbugs.snom.SpotBugsTask
import org.flywaydb.gradle.task.FlywayRepairTask

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.6'
	// id 'com.github.spotbugs' version '6.1.1' Disabled for now!
	id 'jacoco'
	id 'org.flywaydb.flyway' version '11.2.0'
}

group = 'exambyte.main'
version = '0.0.1-SNAPSHOT'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

//spotbugs {
//	toolVersion = '4.9.1'
//	ignoreFailures = false
//	effort = Effort.DEFAULT
//	reportLevel = Confidence.valueOf("MEDIUM")
//}

jacoco {
	toolVersion = '0.8.12'
	reportsDirectory = layout.buildDirectory.dir('jacoco')
}

dependencies {

	// Web
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// JDBC API
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.data:spring-data-jdbc'
	runtimeOnly 'org.postgresql:postgresql'

	// DB Migration
	implementation 'org.flywaydb:flyway-core:11.2.0'
	implementation 'org.flywaydb:flyway-database-postgresql'

	// Tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.tngtech.archunit:archunit:1.3.0'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'

	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//Env
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// Development
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport

	// For DB Tests
	environment "DB_NAME", "test_db"
	environment "DB_USERNAME", "test_user"
	environment "DB_PASSWORD", "test_password"
}

//tasks.withType(SpotBugsTask).configureEach {
//	reports {
//		xml.required = false
//		html.required = true
//	}
//}

jacocoTestReport {
	dependsOn test
	description = "Generate Jacoco coverage reports after running tests."
	reports {
		html.required = true
		xml.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}